--- a/Yatzy.css
+++ b/Yatzy.css
@@ -1,77 +1,62 @@
 .outerbox {
-    width:100%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-
-
-
 .invisible {
-    border-color: white;
-    border-bottom-color: black;
-    border-width: 2px;
-    border-style: solid;
+  border-color: white;
+  border-bottom-color: black;
+  border-width: 2px;
+  border-style: solid;
 }
 .rightborder {
-    border-right-color: black;
+  border-right-color: black;
 }
 .leftborder {
-    border-left-color: black;   
+  border-left-color: black;
 }
 .YATZY {
-    text-align: center;
+  text-align: center;
 }
-
-
-
 .NUB {
-    border-bottom-color: white;
+  border-bottom-color: white;
 }
-
-
 
 .yellow {
-    background-color: yellow;
+  background-color: yellow;
 }
 
-
-
-td, th {
-    border-color: black;
-    border-width: 2px;
-    border-style: solid;
-    text-align: left;
+td,
+th {
+  border-color: black;
+  border-width: 2px;
+  border-style: solid;
+  text-align: left;
 }
-
 
 table {
-    border-collapse: collapse;
-    width: 600px;
-  }
-
-
-
- h1 {
-    border-bottom-color: black;
-    border-bottom-style: solid;
-    border-bottom-width: 2px;
+  border-collapse: collapse;
+  width: 600px;
 }
 
-
+h1 {
+  border-bottom-color: black;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+}
 
 .invisible1 {
-    border-color: white;
-    border-width: 2px;
-    border-style: solid;
+  border-color: white;
+  border-width: 2px;
+  border-style: solid;
 }
 .rightborder1 {
-    border-color: white;
-    border-right-color: black;  
+  border-color: white;
+  border-right-color: black;
 }
 .leftborder1 {
-    border-color: white;
+  border-color: white;
 }
 .www {
-    text-align: center;
+  text-align: center;
 }
-
