Dice one time throw

--- a/Yatzy.css
+++ b/Yatzy.css
@@ -39,7 +39,7 @@ table {
   width: 600px;
 }
 
-h1 {
+.www1 {
   border-bottom-color: black;
   border-bottom-style: solid;
   border-bottom-width: 2px;
